tests/baselines/reference/templateStringUnterminated5_ES6.errors.txt
templateStringUnterminated5_ES6.ts(1,8): error TS1160: Unterminated template literal.


==== templateStringUnterminated5_ES6.ts (1 errors) ====
    `\\\\\`
           
!!! error TS1160: Unterminated template literal.